--- a/about/index.html
+++ b/about/index.html
@@ -581,15 +581,15 @@ Content producers can use EPUBCheck to catch unintentional mistakes early on, so
 			<p>
 			
 			
-				© 2020 W3C
+				© 2020 W3C ®
 			
 			
 			
-				<a href="FIXME">Usage and Privacy Policies</a>	
+				<a href="https://www.w3.org/Consortium/Legal/ipr-notice">Usage and Privacy Policies</a>	
 			
 			
 			
-				<a href="FIXME">Code of Conduct</a>	
+				<a href="https://www.w3.org/Consortium/cepc/">Code of Conduct</a>	
 			
 			
 			</p>
