--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@ h1, h2, h3, h4, h5, h6 {
 <p>Learn more on <a href="get-started/">how to get started</a></p>
 
 	<div class="features">
+<h2 class="visually-hidden">Features</h2>
 
   <div class="features__item">
     <h3>Open Source.</h3>
@@ -554,15 +555,15 @@ h1, h2, h3, h4, h5, h6 {
 			<p>
 			
 			
-				© 2020 W3C
+				© 2020 W3C ®
 			
 			
 			
-				<a href="FIXME">Usage and Privacy Policies</a>	
+				<a href="https://www.w3.org/Consortium/Legal/ipr-notice">Usage and Privacy Policies</a>	
 			
 			
 			
-				<a href="FIXME">Code of Conduct</a>	
+				<a href="https://www.w3.org/Consortium/cepc/">Code of Conduct</a>	
 			
 			
 			</p>
