--- a/404.html
+++ b/404.html
@@ -426,15 +426,15 @@ h1, h2, h3, h4, h5, h6 {
 			<p>
 			
 			
-				© 2020 W3C
+				© 2020 W3C ®
 			
 			
 			
-				<a href="FIXME">Usage and Privacy Policies</a>	
+				<a href="https://www.w3.org/Consortium/Legal/ipr-notice">Usage and Privacy Policies</a>	
 			
 			
 			
-				<a href="FIXME">Code of Conduct</a>	
+				<a href="https://www.w3.org/Consortium/cepc/">Code of Conduct</a>	
 			
 			
 			</p>
